--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
   <title>Auryn</title>
   <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#FFD700">
+<meta name="theme-color" content="#fffff">
 </head>
-
+    <!-- Splash with Play Button -->
+  <div id="splash">
+    <button id="play-btn">▶ Start</button>
+    <video id="intro-video" playsinline>
+      <source src="intro.webm" type="video/webm">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+<div id="main-content">
 <body>
   <h1 class="head">Auryn</h1>
   <p class="heading1">Welcome to AURYN!
@@ -20,6 +28,7 @@
 
   <div class="button-container">
     <button id="pickMediaBtn">Select Images</button>
+  </div>
   </div>
 </div>
 
